<resources>
    <string name="app_name">Insulina</string>
    <string name="add_item_heading">Nowy wpis</string>
    <string name="edit_item_heading">Edytuj wpis</string>
    <string name="item_name_hint">Nazwa produktu</string>
    <string name="item_insuline_hint">Liczba jednostek na posiłek</string>
    <string name="editor_heading_basic">Informacje podstawowe</string>
    <string name="editor_heading_additional">Informacje dodatkowe</string>
    <string name="item_desc_hint">Opis produktu (opcjonalne)</string>
    <string name="glucose_level_2h_later_hint">Poziom cukru 2h później (opcjonalne)</string>
    <string name="glucose_before_hint">Poziom cukru przed jedzeniem (opcjonalne)</string>
    <string name="intake_to_get_down_hint">Ilość jednostek podanych do zbicia cukru (opcjonalne)</string>
    <string name="empty_list_heading">Lista jest pusta.</string>
    <string name="empty_list_hint">Dodaj jakieś wartości.</string>
    <string name="item_name">Nazwa</string>
    <string name="item_insuline_intake">Ilość jednostek</string>
    <string name="menu_save">Zapisz</string>
    <string name="menu_delete">Skasuj</string>

    <!-- Toast messages -->
    <string name="empty_values_toast">Wartość w polach Nazwa produktu i Liczba jednostek nie może być pusta</string>
    <string name="toast_entry_saved">Wpis zapisany</string>
    <string name="toast_entry_not_saved">Błąd przy zapisywaniu</string>
    <string name="toast_entry_updated">Wpis zaktualizowany</string>
    <string name="toast_entry_not_updated">Błąd przy aktualizacji wpisu</string>
    <string name="toast_entry_deleted">Wpis skasowany</string>
    <string name="toast_entry_not_deleted">Błąd przy kasowaniu wpisu</string>

    <!-- Dialog messages -->
    <string name="delete_dialog_message">Czy na prawdę chcesz usunąć ten wpis?</string>
    <string name="delete_confirmation">Kasuj</string>
    <string name="delete_deny">Anuluj</string>
    <string name="permission_title">Wymagany dostęp</string>
    <string name="permission_storage">Pamięć zewnętrzna</string>
</resources>
